<resources>
    <string name="app_name">HelpMeDecide</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_dice_roll">DiceRoll</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_main">HELP ME DECIDE -></string>
    <string name="roll">Roll</string>
    <string name="first_card">Who`s gonna do it?</string>
    <string name="first_desc">Use dice rolls to determine your fate.</string>
    <string name="second_card">Location based lists</string>
    <string name="second_desc">We use your location to make up a list of restaurants.</string>
    <string name="third_card">Generate my own list.</string>
    <string name="third_desc">Generate your own list of things, decide with spinning the wheel.</string>
    <string name="title_activity_location_services">You\'re Here -></string>
    <string name="restaurants_button">Restaurant List</string>
    <string name="restaurants_text">This will lead you to finding out whats restaurants are in your area!</string>
    <string name="tourist_text">This will lead you to finding out whats tourism spots are in your area!</string>
    <string name="tourist_button">Tourism List</string>
    <string name="location_info">Getting location…</string>
    <string name="location_unavailable">Permission not granted. Please enable location access.</string>
    <string name="places_api_key">AIzaSyCllA4fDKzo_xhNro7R8TsIoMLwb9-wAuo</string>
    <string name="welcome">Help Me Decide</string>
    <string name="dice_intro">Make a List of people who are playing, then click complete list to play.</string>
</resources>