<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/off_white"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:background="@drawable/rounded_background"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_activity_location_services"
                android:textAlignment="center"
                android:textColor="@color/off_white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="559dp"
            android:background="@color/off_white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            android:requiresFadingEdge="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/TextViewStyle"
                android:text="@string/restaurants_text" />

            <Button
                android:id="@+id/button7"
                style="@style/ButtonStyle"
                android:text="@string/restaurants_button" />

            <Space
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewStyle"
                android:text="@string/tourist_text" />

            <Button
                android:id="@+id/button6"
                style="@style/ButtonStyle"
                android:text="@string/tourist_button" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
